2005-04-27  Carl Worth  <cworth@cworth.org>

	* test/.cvsignore:
	* test/buffer-diff.c: (xunlink), (buffer_diff), (image_diff):
	* test/buffer-diff.h:
	* test/cairo-test.c: (set_image_target), (cleanup_image_target),
	(set_glitz_target), (cleanup_glitz_target), (set_quartz_target),
	(cleanup_quartz_target), (set_win32_target),
	(cleanup_win32_target), (set_xcb_target), (cleanup_xcb_target),
	(set_xlib_target), (cleanup_xlib_target), (cairo_test_for_target),
	(cairo_test_real), (cairo_test_expect_failure), (cairo_test):
	* test/cairo-test.h:
	* test/read-png.c: (read_png_argb32):
	* test/xmalloc.h: Add support for testing multiple backends,
	courtesy of cairo_surface_write_to_png. Currently, only image and
	xlib backends are fullk hooked-up, but other backends should be
	quite easy to add for anyone skilled in the appropriate art.

2005-04-27  Owen Taylor  <otaylor@redhat.com>

	* src/cairo-traps.c src/cairoint.h (_cairo_traps_init_box):
	New function to create a single trapezoid box.

	* src/cairo.c src/cairo-gstate.c src/cairoint.h: Move 
	the implementation of cairo_paint() into cairo-gstate.c
	for a better fix for the problem with backend/user coordinate
	confusion. Also no longer clear the current path on
	cairo_paint().

2005-04-26  Carl Worth  <cworth@cworth.org>

	* src/cairo.c (cairo_paint): Build rectangle with an identity
	matrix in place so that the entire target surface will be filled
	even when there is a transformation in place.

2005-04-26  Owen Taylor  <otaylor@redhat.com>

	* doc/public/cairo-sections.txt: Updated.

	* src/cairo-png.c src/cairo.h: Fix up some doc build issues.

2005-04-26  Carl Worth  <cworth@cworth.org>

	* test/.cvsignore:
	* test/Makefile.am:
	* test/paint-ref.png:
	* test/paint.c: (draw), (main): Add test to demonstrate bug in
	cairo_paint when under a non-identity transformation.

2005-04-26  Carl Worth  <cworth@cworth.org>

	* ROADMAP: 
	* TODO: Note that cairo_paint and cairo_clip/fill/stroke_preserve
	are all done now.
